--- a/index.html
+++ b/index.html
@@ -6,13 +6,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <section class="container principal">
-        <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-        <img src="./img/Combo.png" alt="O Combo + é a combinação">
+        <div class="container__caixa">
+            <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço
+                único.</h1>
+            <img src="./img/Combo.png" class="container__imagem" alt="O Combo + é a combinação">
+
+            <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$120 Reais</a>
+            <a href="www.alura.com.br" class="container__botao secundario2">Assinar somente o Alura+</a>
+            <p class="container__aviso">O preço pode variar caso a assinatura seja feita em outros planos*</p>
+
+        </div>
     </section>
+
+    <section class="container secundario">
+        <img src="./img/Plataformas.png" alt="As plataformas aceitas" class="secundario__imagem">
+        <div class="container__descricao">
+            <h2 class="descricao__titulo">Assista do seu jeito</h2>
+            <p class="descricao__texto">Aproveite a tela grande da TV ou assista no tablet. Nossa seleção de cursos não
+                para de crescer</p>
+        </div>
+    </section>
+
+    <section class="container secundario">
+        <div class="container__descricao">
+            <p class="descricao__texto">Só o Combo+ oferece Alura Plus e Alura Língua juntos para você ter acesso a diversos cursos de tecnologia e aprender inglês ou espanhol. Aprenda onde e como quiser</p>
+            <a href="www.alura.com.br" class="container__botao secundario__botao">Assinar o Combo+</a>
+        </div>
+        <img src="./img/Telas.png" alt="Tela da alura + e Lingua"class="secundario__imagem">
+
+    </section>
+
 </body>
 
 </html>
