--- a/index.html
+++ b/index.html
@@ -36,13 +36,69 @@
 
     <section class="container secundario">
         <div class="container__descricao">
-            <p class="descricao__texto">Só o Combo+ oferece Alura Plus e Alura Língua juntos para você ter acesso a diversos cursos de tecnologia e aprender inglês ou espanhol. Aprenda onde e como quiser</p>
+            <p class="descricao__texto">Só o Combo+ oferece Alura Plus e Alura Língua juntos para você ter acesso a
+                diversos cursos de tecnologia e aprender inglês ou espanhol. Aprenda onde e como quiser</p>
             <a href="www.alura.com.br" class="container__botao secundario__botao">Assinar o Combo+</a>
         </div>
-        <img src="./img/Telas.png" alt="Tela da alura + e Lingua"class="secundario__imagem">
+        <img src="./img/Telas.png" alt="Tela da alura + e Lingua" class="secundario__imagem">
 
     </section>
 
+    <section class="container secundario">
+        <img src="./img/Notebook.png">
+        <div class="container__descricao">
+            <h2 class="descricao__titulo">Baixe seus cursos</h2>
+            <p class="descricao__texto">Baixe e assista onde e quando quiser. Assim, seus favoritos estão sempre com
+                você, mesmo sem internet.</p>
+        </div>
+    </section>
+
+    <section>
+        <h2 class="descricao__titulo dispositivos">Disponível nos seus dispositivos favoritos</h2>
+        <div class="container__dispositivos">
+            <div class="dispositivos__ele">
+                <img src="./img/tv.png">
+                <p class="lista__item">TV</p>
+            </div>
+            <div class="dispositivos__ele">
+                <img src=".//img/computador.png">
+                <p class="lista__item">Computadores</p>
+            </div>
+            <div class="dispositivos__ele">
+                <img src="./img/celular.png">
+                <p class="lista__item">Celulares e tablets</p>
+            </div>
+        </div>
+    </section>
+
+    <footer class="rodape">
+        <img src="./img/Logo.png" class="rodape__logo">
+        <ul class="rodape__lista">
+            <li class="lista__link">
+                <a href="#">Idioma</a>
+            </li>
+            <li class="lista__link">
+                <a href="#">Dispositivos compatíveis</a>
+            </li>
+            <li class="lista__link">
+                <a href="#">Contrato de Assinatura</a>
+            </li>
+            <li class="lista__link">
+                <a href="#">Política de privacidade</a>
+            </li>
+            <li class="lista__link">
+                <a href="#">Proteção de dados no Brasil</a>
+            </li>
+            <li class="lista__link">
+                <a href="#">Anuncios personalizados</a>
+            </li>
+            <li class="lista__link">
+                <a href="#">Ajuda</a>
+            </li>
+        </ul>
+        <p class="rodape__texto">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae nihil quisquam soluta incidunt sapiente quaerat alias placeat amet, error tenetur repellendus veritatis autem deleniti doloribus eos nostrum dolor unde! Ab!</p>
+        <p class="rodape__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam laudantium dolores eius, ad quos ullam aliquid commodi minima veniam, repellendus blanditiis nesciunt! Dolor exercitationem suscipit, voluptas sit dolore distinctio a. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit dolor maxime laborum molestiae veritatis adipisci, animi rerum laboriosam doloribus autem impedit eligendi voluptatem. Ratione, et reiciendis. Qui eaque odit doloremque.</p>
+    </footer>
 </body>
 
 </html>
